# COMP8047-Project

./: Readme.md  TODO.md
client/: README.md  pubspec.yaml
client/lib/: main.dart  patient_page.dart  patient_selection.dart  record_page.dart  socket_api.dart
daemon/: .gitignore  Cargo.toml  ehr.sqlite-journal
daemon/src/: main.rs
daemon/src/lib/: blockchain.rs  database.rs  lib.rs  network.rs  socket.rs
docs/: Acceptance Tests.md  Blockchain Functionality.md  Blockchain Notes.md  Future Enhancements.md  Networking Functionality.md  Networking Notes.md  Schedule.md  Socket API.md  User Stories.md
