[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rusqlite = "0.25.0"
openssl = "0.10.35"
rand = "0.8"
rustc-serialize = "0.3.24"
uuid = {version = "1.7.0", features = ["v4"]}
tokio = {version = "1.35.1", features = ["full"]}
libp2p = {version = "0.53.2", features = ["full"]}
once_cell = "1.5"

[lib]
name = "internal_lib"
path = "src/lib/lib.rs"